@@ -11,19 +11,49 @@ app->defaults(enable_charts => app->config('enable_charts') // $ENV{PASTE_ENABLE
 app->defaults(title         => 'Mojopaste');
 
 my $ID = 0;
-my $paste_dir = app->config('paste_dir') || $ENV{PASTE_DIR} || '/tmp/mojopaste';
--d $paste_dir or File::Path::mkpath($paste_dir) or die "mkpath $paste_dir: $!";
 
-helper paste => sub {
-  my $cb = pop;
-  my $c  = shift;
-  my $id = shift // $c->stash('paste_id');
+if (my $url = app->config('db_url') || $ENV{PASTE_DB_URL}) {
+  my $class = $url =~ /^mysql/ ? 'Mojo::mysql' : 'Mojo::Pg';
+  eval "require $class;1" or die "$class is not installed: $@";
+  my $dbc = $class->new($url);
+  helper paste => sub {
+    my $cb    = pop;
+    my $c     = shift;
+    my $id    = shift // $c->stash('paste_id');
+    my $paste = @_ ? encode 'UTF-8', shift : undef;
+    my $db    = $dbc->db;
 
-  return $c->$cb("Hacking attempt: $id", "") if $id =~ m!\W!;
-  return $c->$cb($!, eval { decode "UTF-8", slurp "$paste_dir/$id" }) unless @_;
-  spurt encode("UTF-8", $_[0]), "$paste_dir/$id";
-  $c->$cb("");
-};
+    $c->stash(db => $db)->delay(
+      sub {
+        my ($delay) = @_;
+        return $c->$cb("Hacking attempt: $id", "") if $id =~ m!\W!;
+        return $db->query("select paste from mojopaste where id = ?", $id, $delay->begin) unless $paste;
+        return $db->query("insert into mojopaste (id, paste) values (?, ?)", $id, $paste, $delay->begin);
+      },
+      sub {
+        my ($delay, $err, $res) = @_;
+        return $c->$cb($err) if $paste;
+        return $c->$cb($err, decode 'UTF-8', $res->array->[0]);
+      }
+    );
+  };
+  my $file = $url =~ /^mysql/ ? 'db.mysql' : 'db.pg';
+  $dbc->migrations->name('mojopaste')->from_data(__PACKAGE__, $file)->migrate;
+}
+else {
+  my $paste_dir = app->config('paste_dir') || $ENV{PASTE_DIR} || '/tmp/mojopaste';
+  -d $paste_dir or File::Path::mkpath($paste_dir) or die "mkpath $paste_dir: $!";
+  helper paste => sub {
+    my $cb = pop;
+    my $c  = shift;
+    my $id = shift // $c->stash('paste_id');
+
+    return $c->$cb("Hacking attempt: $id", "") if $id =~ m!\W!;
+    return $c->$cb($!, eval { decode "UTF-8", slurp "$paste_dir/$id" }) unless @_;
+    spurt encode("UTF-8", $_[0]), "$paste_dir/$id";
+    $c->$cb("");
+  };
+}
 
 get '/' => {layout => 'mojopaste'} => sub {
   my $c = shift;
@@ -272,3 +302,21 @@ window.addEventListener('load', function(e) {
 <pre class="prettyprint"><%= $paste %></pre>
 @@ powered_by.html.ep
 <span class="powered-by">Powered by <a href="https://metacpan.org/pod/App::mojopaste#DESCRIPTION" title="Get mojopaste">Mojopaste</a></span>
+@@ db.pg
+-- 1 up
+create table mojopaste (
+  id varchar(32) not null,
+  paste text,
+  created timestamp not null default current_timestamp
+);
+-- 1 down
+drop table mojopaste;
+@@ db.mysql
+-- 1 up
+create table mojopaste (
+  id varchar(32) not null,
+  paste text,
+  created timestamp not null default current_timestamp
+);
+-- 1 down
+drop table mojopaste;
