@@ -1,6 +1,7 @@
 Revision history for perl distribution App-mojopaste
 
 0.16 Not Released
+ - Can store/retrieve paste from database
  - Recommends JSON::Syck
  - Recommends Text::CSV
 
